src/components/UploadInsight.css
/*
 * Copyright 2018 data.world, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * This product includes software developed at
 * data.world, Inc. (http://data.world/).
 */
 .upload-row {
   margin: 0;
   height: 100vh;
 }

 .insight-upload {
    width: 85%;
    margin: 0 auto;
  }

 .insight-selected {
    max-width: 100%;
    max-height: 100%;
    margin: 30px 0;
}

.input-group, .dropdown-menu {
  width: 100%;
}

.insight-label {
  margin-top: 20px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.insight-info {
 float: right;
 font-weight: normal;
 color: gray;
 font-size: 12px;
}

.insight-upload-buttons {
  display: flex;
  justify-content: space-between;
  margin: 35px 0;
}

.insight-upload-button {
  width: 45.5%;
}

.insight-upload .dropdown {
  width: 100%;
}

.insight-upload .dropdown-toggle {
  color: #5d6f85;
  background-color: white;
  box-shadow: none;
  border-color: #6290c3;
}

.projects {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: #5d6f85;
  padding-left: 12px;
  padding-right: 12px;
  box-shadow: none;
  border: 1px solid #a3afbf;
  border-radius: 0;
}

